tree-sitter/test/corpus/for_in_range.txt
================================================================================
For-in loop with range expression
================================================================================
worker tester() {
    for var item in items {
        log(item)
    }
}
--------------------------------------------------------------------------------

(source_file
  (worker_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (for_statement
        iterator: (identifier)
        iterable: (identifier)
        body: (block
          (expression_statement
            (call_expression
              function: (identifier)
              arguments: (argument_list
                (identifier)))))))))

================================================================================
For-in loop inside prompt do block with range
================================================================================
think {
    do {
        for var i in 1...3 {
            log(i)
        }
    }
}
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (prompt_block
      body: (prompt_body
        (prompt_start)
        (prompt_text)
        (prompt_do_block
          (prompt_do)
          (block
            (for_statement
              iterator: (identifier)
              iterable: (binary_expression
                left: (number)
                right: (number))
              body: (block
                (expression_statement
                  (call_expression
                    function: (identifier)
                    arguments: (argument_list
                      (identifier))))))))
        (prompt_text)
        (prompt_end)))))
